# vizor_nvr

./: .env.example  .gitattributes  .gitignore  .sops.yaml  MASTER_PLAN.md  Makefile  README.md  RUNBOOKS.md  SECRETS.md  TODO.txt  docker-compose.ai-base.yml  docker-compose.ai.yml  docker-compose.ai.yml.removed  docker-compose.dev.yml  docker-compose.frs.yml  docker-compose.ppe.yml  docker-compose.yml  go2rtc.yaml  go2rtc.yaml.template  gvd-cms.code-snippets.json  install.ps1  install.sh
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  requirements-dev.txt  requirements.txt  server.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/ai/: __init__.py  frs_photos_router.py  frs_router.py  models.py  public_router.py  qdrant_client.py  scenarios_router.py  seed.py  triton_client.py
backend/app/audit/: __init__.py  models.py  router.py  service.py
backend/app/auth/: __init__.py  api_keys.py  api_keys_router.py  models.py  password_policy.py  router.py  service.py  totp_service.py
backend/app/bookmarks/: models.py  router.py  service.py
backend/app/cameras/: __init__.py  audio_router.py  credentials_router.py  imaging_router.py  io_router.py  models.py  onvif_creds.py  onvif_event_service.py  onvif_metadata.py  onvif_service.py  pos_router.py  ptz_router.py  recording_router.py  router.py  schedule_templates_router.py  service.py  system_router.py  twoway_audio_service.py
backend/app/cluster/: models.py  router.py  service.py
backend/app/core/: __init__.py  audit_logger.py  crypto.py  db_retry.py  dependencies.py  graceful_shutdown.py  ip_allowlist.py  license_gate.py  licensing.py  metrics.py  pagination.py  permissions.py  rate_limiter.py  security.py  ssrf.py  websocket.py  websocket_router.py
backend/app/events/: aggregates.py  ingest_router.py  linkage_service.py  models.py  router.py  service.py  sse_router.py
backend/app/license/: __init__.py  fingerprint.py  keys.py  router.py  service.py
backend/app/monitoring/: __init__.py  camera_health_router.py  router.py  service.py
backend/app/notifications/: __init__.py  models.py  router.py  (+5 more)
backend/migrations/: env.py
backend/scripts/: admin_register.py  dlq_replay.py  inject_test_events.py  migrate_from_vizor_app.py  onvif_conformance_check.py  register_existing_recordings.py
backend/tests/: conftest.py  test_ai_plugin_gateway.py  test_anr_service.py  test_api_keys.py  test_archive_service.py  test_cluster.py  test_crypto.py  test_dewarp_service.py  test_download_tokens.py  test_ffmpeg_governor.py  test_go2rtc_manager.py  test_ip_allowlist.py  test_metropolis_bridge.py  test_new_features.py  test_onvif_client_media2.py  test_onvif_client_profile_g.py  test_onvif_device.py  test_onvif_event_metadata.py  test_onvif_metadata_parser.py  test_password_policy.py  test_pos_overlay.py  test_raid_service.py  test_sms_service.py  test_spot_output.py  test_totp.py  test_whatsapp_service.py
deepstream/frs/: Dockerfile  pipeline.py
deepstream/model_repository/: Dockerfile.exporter  README.md  download_weights.sh  export.py
deepstream/people_counting/: Dockerfile  analytics.py  pipeline.py
deepstream/ppe/: Dockerfile  pipeline.py
docs/: AI_INFERENCE.md  AI_INTEGRATION_PLAN.md  ARCHITECTURE.md  CAPACITY_TESTING.md  DR_RUNBOOK.md  FOOTPRINT.md  FRS_SECURITY_DEPLOYMENT.md  INSTALL_LINUX.md  INSTALL_WINDOWS.md  KNOWN_LIMITATIONS.md  NVR_ONVIF_COMPLETION_PLAN.md  ONVIF_COMPLIANCE.md  ONVIF_DEVICE_COMPLIANCE.md  SCOPE_PPE_ANPR_INTEGRATION.md  SIZING.md  SMOKE_2026_05_28.md  SUSPECT_SEARCH_OVERHAUL_PLAN.md  SUSPECT_SEARCH_SCENARIO.md  TURN_DEPLOYMENT.md  VENDOR_COMPATIBILITY.md  ppe-async-worker-port.md
frontend/: .env  .env.example  Dockerfile  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json  runtime-config.js  service-worker.js
frontend/src/: App.css  App.js  index.css  index.js
k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  go2rtc-daemonset.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  secret.yaml  storage-pvc.yaml
metropolis/: README.md
nginx/: nginx.conf
scenarios/: README.md
scenarios/_sdk/: pyproject.toml
scenarios/_sdk/cpp/vizor_decode/: CMakeLists.txt  README.md
scenarios/_sdk/cpp/vizor_decode/bindings/: pybind11_module.cpp
scenarios/_sdk/cpp/vizor_decode/examples/: cli_decode.cpp  py_demo.py
scenarios/_sdk/cpp/vizor_decode/include/vizor_decode/: async_decoder.hpp  decoder.hpp  errors.hpp  frame.hpp  preprocess.hpp  ringbuffer.hpp
scenarios/_sdk/cpp/vizor_decode/src/: async_decoder.cpp  decoder.cpp  preprocess.cu
scenarios/_sdk/vizor_sdk/: __init__.py  app.py  config.py  events.py  frames.py  nvr.py  objectstore.py  public.py  qdrant.py  rules.py  tracker.py  triton.py
scenarios/_sdk/vizor_sdk/aio/: circuit_breaker.py  event_sink.py  frame_source.py  inference_gateway.py  supervisor.py
scenarios/_sdk/vizor_sdk/worker/: __init__.py  circuit_breaker.py  cpp_frame_source.py  dedup.py  event_spool.py  event_tagging.py  ffmpeg_frame_source.py  frame_source.py  geometry.py  inference_gateway.py  observability.py  platform_config.py  protocol.py  qdrant_client.py  rustfs_client.py  stream_recovery.py  triton_client.py  worker.py
scenarios/_template/: Dockerfile  README.md  app.py  detect.py  logic.py  requirements.txt  scenario.json
scenarios/anpr/: Dockerfile  alembic.ini  app.py  requirements.txt  scenario.json
scenarios/frs/: Dockerfile  README.md  alembic.ini  app.py  migrate_from_nvr.py  requirements.txt  scenario.json
scenarios/ppe/: Dockerfile  alembic.ini  app.py  requirements.txt  scenario.json
scenarios/suspect-search/: Dockerfile  app.py  requirements.txt  scenario.json
scripts/: fetch-frs-models.sh  frs_loadtest.sh  generate-go2rtc-config.py  seed-go2rtc-config.ps1  seed-go2rtc-config.sh  sign_license.py  sops-bootstrap.sh  sops-entrypoint.sh  uninstall.sh
scripts/license_web/: README.md  app.py  requirements.txt
triton/: build_trt_engines.sh
(+563 files in other folders)
